[gd_scene load_steps=19 format=2]

[ext_resource path="res://Combat/UI/Buttons/Main/Attack1.png" type="Texture" id=1]
[ext_resource path="res://Combat/UI/Buttons/Main/Bag0.png" type="Texture" id=2]
[ext_resource path="res://Combat/UI/Buttons/Main/Attack0.png" type="Texture" id=3]
[ext_resource path="res://Combat/UI/Buttons/Main/Flee0.png" type="Texture" id=4]
[ext_resource path="res://Combat/UI/Combat-Mockup.png" type="Texture" id=5]
[ext_resource path="res://Combat/UI/Buttons/Main/Bag1.png" type="Texture" id=6]
[ext_resource path="res://Combat/UI/Buttons/Main/Flee1.png" type="Texture" id=7]
[ext_resource path="res://Combat/Scripts/CombatMenu.gd" type="Script" id=8]
[ext_resource path="res://Combat/UI/Buttons/Attacks/Counter1.png" type="Texture" id=9]
[ext_resource path="res://Combat/UI/Buttons/Attacks/Quick0.png" type="Texture" id=10]
[ext_resource path="res://Combat/UI/Buttons/Attacks/Quick1.png" type="Texture" id=11]
[ext_resource path="res://Combat/UI/Buttons/Attacks/Heavy1.png" type="Texture" id=12]
[ext_resource path="res://Combat/UI/Buttons/Attacks/Counter0.png" type="Texture" id=13]
[ext_resource path="res://Combat/UI/Buttons/Attacks/Heavy0.png" type="Texture" id=14]
[ext_resource path="res://Combat/Scripts/Combat.gd" type="Script" id=15]
[ext_resource path="res://Combat/TestFontRes/CombatTestFont.tres" type="DynamicFont" id=16]
[ext_resource path="res://Combat/Scripts/PlayerCombat.gd" type="Script" id=17]
[ext_resource path="res://Combat/Scripts/EnemyCombat.gd" type="Script" id=18]

[node name="Combat" type="Node"]
script = ExtResource( 15 )

[node name="CombatMenu" type="Control" parent="."]
margin_right = 64.0
margin_bottom = 64.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mockup" type="TextureRect" parent="CombatMenu"]
margin_left = -136.0
margin_right = 68.0
margin_bottom = 64.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButtons" type="Control" parent="CombatMenu"]
margin_top = 48.0
margin_right = 64.0
margin_bottom = 64.0

[node name="AttackButton" type="TextureButton" parent="CombatMenu/MainButtons"]
margin_left = 12.0
margin_top = 1.0
margin_right = 52.0
margin_bottom = 8.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BagButton" type="TextureButton" parent="CombatMenu/MainButtons"]
margin_left = 2.0
margin_top = 8.0
margin_right = 31.0
margin_bottom = 15.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FleeButton" type="TextureButton" parent="CombatMenu/MainButtons"]
margin_left = 31.0
margin_top = 8.0
margin_right = 60.0
margin_bottom = 15.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButtons" type="Control" parent="CombatMenu"]
visible = false
margin_top = 48.0
margin_right = 64.0
margin_bottom = 64.0

[node name="CounterButton" type="TextureButton" parent="CombatMenu/AttackButtons"]
margin_left = 4.0
margin_right = 44.0
margin_bottom = 5.0
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuickButton" type="TextureButton" parent="CombatMenu/AttackButtons"]
margin_left = 4.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 10.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeavyButton" type="TextureButton" parent="CombatMenu/AttackButtons"]
margin_left = 4.0
margin_top = 10.0
margin_right = 44.0
margin_bottom = 15.0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CombatMenu"]
margin_left = 3.0
margin_top = 48.0
margin_right = 61.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 16 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCombat" type="Node" parent="."]
script = ExtResource( 17 )

[node name="EnemyCombat" type="Node" parent="."]
script = ExtResource( 18 )
[connection signal="pressed" from="CombatMenu/MainButtons/AttackButton" to="CombatMenu" method="_on_AttackButton_pressed"]
[connection signal="pressed" from="CombatMenu/AttackButtons/CounterButton" to="." method="_on_AttackButtons_pressed" binds= [ "Counter" ]]
[connection signal="pressed" from="CombatMenu/AttackButtons/QuickButton" to="." method="_on_AttackButtons_pressed" binds= [ "Quick" ]]
[connection signal="pressed" from="CombatMenu/AttackButtons/HeavyButton" to="." method="_on_AttackButtons_pressed" binds= [ "Heavy" ]]
